Comply with JDK8